[gd_scene load_steps=21 format=2]

[ext_resource path="res://sprites/background/aschoolwit_fg.png" type="Texture" id=1]
[ext_resource path="res://sprites/background/aschoolpro_bg.png" type="Texture" id=2]
[ext_resource path="res://sprites/background/aschoolwit_bg.png" type="Texture" id=3]
[ext_resource path="res://sprites/background/aschooljud_fg.png" type="Texture" id=4]
[ext_resource path="res://sprites/background/aschooldef_fg.png" type="Texture" id=5]
[ext_resource path="res://sprites/background/aschooljud_bg.png" type="Texture" id=6]
[ext_resource path="res://sprites/background/aschoolpro_fg.png" type="Texture" id=7]
[ext_resource path="res://sprites/background/aschooldef_bg.png" type="Texture" id=8]
[ext_resource path="res://scenes/character_scenes/character_temichlegs.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/character_scenes/character_mashasis.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/character_scenes/character_write.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/character_scenes/character_tuvok.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/inter_v3.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/character_scenes/character_egorich.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/character_scenes/character_layton.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/character_scenes/character_sonya.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/character_scenes/character_sewa.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/case_3/trial_1/arc_a/trial_11a_interogate.gd" type="Script" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "pro",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "wit",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "def",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "jud",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "pro",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "wit",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "def",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "jud",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 18 )

[node name="back_ground" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "jud"
centered = false

[node name="characters_all" type="Node2D" parent="."]
position = Vector2( -1, -115 )

[node name="character_egorich" parent="characters_all" instance=ExtResource( 14 )]
visible = false
position = Vector2( -23, 203 )

[node name="character_temich" parent="characters_all" instance=ExtResource( 9 )]
visible = false
position = Vector2( 10.5947, 190.703 )

[node name="character_sewa" parent="characters_all" instance=ExtResource( 17 )]
visible = false
position = Vector2( 4.23792, 130.314 )

[node name="character_lentoln" parent="characters_all" instance=ExtResource( 15 )]
position = Vector2( -25, 171 )

[node name="character_werur" parent="characters_all" instance=ExtResource( 11 )]
visible = false
position = Vector2( -15, 190.703 )

[node name="character_sonya" parent="characters_all" instance=ExtResource( 16 )]
visible = false
position = Vector2( -7, 187 )

[node name="character_tuvok" parent="characters_all" instance=ExtResource( 12 )]
visible = false

[node name="sprite" parent="characters_all/character_tuvok" index="0"]
position = Vector2( 515.86, 557.633 )

[node name="desk" parent="characters_all/character_tuvok" index="1"]
visible = false

[node name="character_msis" parent="characters_all" instance=ExtResource( 10 )]
visible = false
position = Vector2( -5.29736, 190.703 )

[node name="fore_ground" type="AnimatedSprite" parent="."]
position = Vector2( 0, 88 )
frames = SubResource( 2 )
animation = "jud"
centered = false

[node name="investigation_screen" parent="." instance=ExtResource( 13 )]

[connection signal="next" from="investigation_screen" to="." method="_on_investigation_screen_next"]

[editable path="characters_all/character_tuvok"]
